made modifications to make the site better on mobile

--- a/css/global.css
+++ b/css/global.css
@@ -19,6 +19,11 @@
     font-family: "Cormorant Garamond";
     src: url(../fonts/cormorant_garamond_medium.ttf) format("truetype");
 }
+
+* { max-height: 100000px; }
+
+   
+/* Built-in tag reformatting ------------------------------------------------ */
  
 html /* Setup background image */
 {
@@ -34,37 +39,79 @@ html /* Setup background image */
     background-attachment: fixed;
 }
 
-   
+footer
+{
+    background-color: var(--limited);
+    display: block;
+}
+
+h1, h2, h3, p 
+{ 
+    font-weight: normal; 
+    text-align: center;
+    padding: 0px 40px;
+}
+
+
+h1
+{
+    margin: 0px;
+    position: relative;
+}
+
+img
+{
+    width: 100%;
+    height: 100%;
+}
+
+a
+{
+    color: var(--limited);
+    text-decoration: none;
+    box-shadow: inset 0 0px 0 white, inset 0 -1px 0 black
+}
+
+span
+{
+    z-index: 1;
+}
+
+hr
+{
+    border-color: var(--limited);
+    size: 2px;
+    margin: 0px 40px 5px 40px;
+}
+
+button
+{
+    font-family: inherit;
+    border: 0;
+    padding: 0;
+}
+
+
 /* Header related classes --------------------------------------------------- */
 
 header
 {
     background-color: var(--limited);
-    width: 1200px;
-    height: 265px;
-    margin-top: 2.5% !important;
-    margin-bottom: 10px !important;
-    margin: 0 auto;
     display: block;
-
 }
 
 header .title
 {
     color: var(--overdose);
     font-family: "Real One Specific Script" !important;
-    font-size: 140;
-    margin-left: 110px;
-    margin-right: 75px;
     display: inline-block;
     position: relative;
-    top: -35px;
 }
 
 header .subtitle
 {
     color: var(--overdose);
-    font-size: 35;
+    font-size: 35px;
     margin-left: 350px;
     display: block;
     position: relative;
@@ -75,7 +122,7 @@ header .wedding_logo
 {
     width: 150px;
     height: 150px;
-    margin-top: 22px;
+    margin: 20px;
     display: inline-block;
 }
 
@@ -87,224 +134,245 @@ header a
 header nav 
 {
     background-color: var(--overdose);
-    height: 30px;
-    padding: 5px 150px;
+    font-weight: bold;
+    text-align: center;
     display: block;
     position: relative;
-    top: -48px;
 }
 
 header .nav_item 
 {
-    font-size: 26;
-    font-weight: bold;
     text-align: center;
-    margin: 0px 25px;
-
     display: inline-block;
     z-index: 1;
 }
 
 
-/* Header related classes --------------------------------------------------- */
+/* Article related classes --------------------------------------------------- */
 
 article
 {
     background-color: var(--overdose);
-    width: 1120px;
-    margin: 0 auto;
-    padding: 0px 40px;
     display: block;
 }
-
-footer
+  
+article .boxes
 {
-    background-color: var(--limited);
-    width: 1200px;
-    height: 40px;
-    margin-top: 10px !important;
-    margin-bottom: 3.5% !important;
-    text-align: center;
-    margin: 0 auto;
-    display: block;
-
-}
-
-/****************************************************************************/
-/*                                                                          */
-/* Built-In Text-Related Reformatting                                       */
-/*                                                                          */
-/****************************************************************************/
-
-h1
-{
-    margin: 0px;
-    font-size: 50;
-    font-weight: normal;
-    text-align: center;
-    position: relative;
-    top: 30px;
-}
-
-h2
-{
-    font-size: 26;
-    font-weight: normal;
-    text-align: center;
-    padding: 0px 10px;
-}
-
-h3
-{
-    font-size: 32;
-    font-weight: normal;
-    margin-top: 30px;
-    margin-bottom: 0px;
-}
-
-p
-{
-    font-size: 20;
-    font-weight: normal;
-    padding: 0px 10px;
-}
-
-
-/****************************************************************************/
-/*                                                                          */
-/* Built-In Reformatting for Other Tags                                     */
-/*                                                                          */
-/****************************************************************************/
-
-img /* Reformatting images */
-{
-    width: 100%;
-    height: 100%;
-}
-
-a /* Reformatting links */
-{
-    color: var(--limited);
-    text-decoration: none;
-    box-shadow: inset 0 0px 0 white, inset 0 -1px 0 black
-}
-
-span /* Reformatting spans */
-{
-    z-index: 1;
-}
-
-hr /* Reformatting horizontal rules */
-{
-    border-color: var(--limited);
-    size: 2px;
-    margin-bottom: 2px;
-}
-
-button /* Reformatting buttons */
-{
-    font-family: inherit;
-    border: 0;
-    padding: 0;
-}
-
-
-/****************************************************************************/
-/*                                                                          */
-/* Header Related Classes                                                   */
-/*                                                                          */
-/****************************************************************************/
-
-
-/****************************************************************************/
-/*                                                                          */
-/* Body Related Classes                                                     */
-/*                                                                          */
-/****************************************************************************/
-
-.horizontally_centered /* Class for centering an element vertically */
-{
-    position: absolute;
-    left: 50%;
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
-}
-
-.vertically_centered /* Class for centering an element vertically */
-{
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
-
-.centered_text /* Reformatting standard text */
-{
-    margin-top: 5px;	
-    padding: 0px 50px;
-    text-align: center;
-}
-
-.boxes
-{
-    width: 120px; 
     display: inline-block; 
     vertical-align: top;
-
+    
     border-left-style: solid;
     border-left-color: var(--limited);
     border-left-width: 0.5px;
-
+    
     border-right-style: solid;
     border-right-color: var(--limited);
     border-right-width: 0.5px;
 }
-
-.boxes p 
+  
+article .boxes p 
 {
     margin: 15px 0px;
+    padding: 0px 8px !important;
 }
-
-.leftmost 
+ 
+article .leftmost 
 {
     border-left-style: none;
 }
-
-.rightmost 
+    
+article .rightmost 
 {
-    width: 125px;
     border-right-style: none;
 }
 
 
+/* --------------------------------------------------------------------------- */
 
-/****************************************************************************/
-/*                                                                          */
-/* Footer Related Classes                                                   */
-/*                                                                          */
-/****************************************************************************/
-
-.footer_text /* Class for the text in the footer */
+@media screen and (orientation: landscape)
 {
-    color: var(--overdose);
-    font-size: 16;
-    padding-top: 30px;
+    /* Built-in tag reformatting -------------------------------------------- */
+
+    html 
+    {
+        background: url(../images/flowers7-40pct.jpg); 
+        -webkit-background-size: contain;
+        -moz-background-size: contain;
+        -o-background-size: contain;
+        background-size: contain;
+        background-repeat: repeat-x;
+        background-attachment: fixed;
+    }
+    
+    footer 
+    { 
+        width: 1200px; 
+        height: 40px;
+        margin: 10px auto 3.5% auto;
+    }
+
+    h1
+    {
+        font-size: 50px;
+        top: 30px;
+    }
+
+    h2
+    {
+        font-size: 26px;
+        padding: 0px 10px;
+    }
+
+    h3
+    {
+        font-size: 32px;
+        margin-top: 30px;
+        margin-bottom: 0px;
+    }
+
+    p
+    {
+        font-size: 20px;
+    }
+
+
+    /* Header related classes ----------------------------------------------- */
+
+    header 
+    {
+        width: 1200px;
+        height: 265px;
+        margin: 2.5% auto 10px auto;
+    }
+   
+    header .title 
+    {
+        font-size: 140px;
+        margin-left: 110px;
+        margin-right: 75px;
+        top: -35px;
+    }
+
+    header nav 
+    {
+        height: 30px;
+        padding: 5px 150px;
+        top: -48px;
+    }
+
+    header .nav_item 
+    {
+        font-size: 26px;
+        margin: 0px 25px;
+    }
+
+    
+    /* Article related classes ----------------------------------------------- */
+    
+    article 
+    {
+        width: 1200px; 
+        margin: 0 auto;
+    }
+ 
+    article .boxes
+    {
+        width: 120px; 
+    }
+} 
+
+/* --------------------------------------------------------------------------- */
+
+@media screen and (orientation: portrait) 
+{
+    /* Built-in tag reformatting -------------------------------------------- */
+
+    html 
+    {
+        background: url(../images/flowers7-40pct.jpg); 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        background-repeat: repeat-x;
+        background-attachment: fixed;
+    }
+
+    footer 
+    { 
+        width: 900px; 
+        height: 60px;
+        margin: 10px auto 3.5% auto;
+    }
+
+    h1
+    {
+        font-size: 75px;
+        top: 30px;
+    }
+
+    h2
+    {
+        font-size: 26px;
+        padding: 0px 10px;
+    }
+
+    h3
+    {
+        font-size: 40px;
+        margin-top: 30px;
+        margin-bottom: 0px;
+    }
+
+    p
+    {
+        font-size: 34px !important;
+    }
+
+    
+    /* Header related classes ----------------------------------------------- */
+
+    header 
+    {
+        width: 900px;
+        height: 360px;
+        margin: 2.5% auto 10px auto;
+    }
+   
+    header .title 
+    {
+        font-size: 120px;
+        margin-left: 50px;
+        margin-right: 30px;
+        top: -55px;
+    }
+ 
+    header nav 
+    {
+        height: 120px;
+        padding: 5px 0px;
+        top: -48px;
+    }
+
+    header .nav_item 
+    {
+        font-size: 40px;
+        margin: 5px 30px;
+    }
+
+    
+    /* Article related classes ----------------------------------------------- */
+    
+    article 
+    { 
+        width: 900px; 
+        margin: 0 auto;
+    }
+ 
+    article .boxes
+    {
+        width: 190px; 
+    }
 }
 
-.footer_text a /* Class to remove underline of footer links */
-{
-    box-shadow: none;
-}
-
-.logo_footer /* Class for logo image */
-{
-    width: 120px;
-    height: 120px;
-    margin-top: 15px;
-    margin-bottom: 40px;
-}
-
-
-/****************************************************************************/
-
+/* --------------------------------------------------------------------------- */
