--- a/css/accommodations.css
+++ b/css/accommodations.css
@@ -1,17 +1,10 @@
-/****************************************************************************/
-/*                                                                          */
-/* Formatting Specific to the Accommodations Page                           */
-/*                                                                          */
-/****************************************************************************/
-
 h3 
 {
     font-weight: bold;
-    text-align: center;
     margin-top: 40px;
 }
 
 p 
 {
-    text-align: center;
+    margin-top: 10px;
 }
