--- a/css/home.css
+++ b/css/home.css
@@ -7,7 +7,7 @@
 {
     .content 
     {
-        padding: 40px 0px;
+        padding: 10px 0px;
         width: 720px;
         display: inline-block; 
         vertical-align: center;
@@ -20,9 +20,10 @@
 
     .big_img 
     {
-        height: auto;
-        width:  310px;
-        padding: 30px;
+        height: 425px;
+        width:  auto;
+        padding: 20px 30px;
+        margin-left: 60px;
         display: inline-block; 
         vertical-align: top;
     }
@@ -45,8 +46,9 @@
     .big_img 
     {
         height: auto;
-        width:  70%;
+        width:  65%;
         margin: 40px auto;
+        margin-bottom: 80px;
         display: block;
     }
 }
